# course-management

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
course-management/course/templates/: base-shell.html  base.html
course-management/course/tests/: __init__.py  misc.py
course-management/course/views/: course.py
course-management/locale/en/LC_MESSAGES/: django.po
course-management/static/css/: style.css
course-management/static/js/: dark-mode.js
course-management/user/: forms.py
course-management/user/views/: contact.py
course-management/util/: html_clean.py
