[tool.poetry]
name = "course-management"
version = "0.1.0"
description = ""
authors = []
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "course-management"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.2.*"
PyYAML = "^6.0.2"
bleach = "6.2.*"
django-modeltranslation = "0.19.*"
Markdown = "^3.8"
django-guardian = "^3.0.0"
psycopg2 = {version = "^2.9.10", optional = true}

[tool.poetry.extras]
pgsql = ["psycopg2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
